--- a/views/main.haml
+++ b/views/main.haml
@@ -151,7 +151,7 @@
           / Placed at the end of the document so the pages load faster
           %script{:src => "https://code.jquery.com/jquery-1.10.2.min.js"}
           %script{:src => "/dist/js/bootstrap.min.js"}
-          %script{:src => "/register1.js"}
+          %script{:src => "/register.js"}
           :javascript
                         
           function flo()
