--- a/views/main.haml
+++ b/views/main.haml
@@ -8,16 +8,16 @@
             %meta{:content => "", :name => "author"}
               %link{:href => "/docs-assets/ico/favicon.png", :rel => "shortcut icon"}
                 %title Event Planner
-                %link{:href => "/dist/css/bootstrap.css", :rel => "stylesheet"}
+                %link{:href => "../assets/css/bootstrap.css", :rel => "stylesheet"}
                   / Custom styles for this template
-                  %link{:href => "jumbotron.css", :rel => "stylesheet"}
+                  %link{:href => "", :rel => "stylesheet"}
                     / Just for debugging purposes. Don't actually copy this line!
                     /[if lt IE 9] <script src="/docs-assets/js/ie8-responsive-file-warning.js"></script>
                     / HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
                     /[if lt IE 9]
                       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
                       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-                    %script{:src => "/login.js"}  
+                    %script{:src => "../assets/js/login.js"}  
                     :javascript
                       function demoVisibility()
                       {
@@ -149,9 +149,9 @@
             Bootstrap core JavaScript
             \==================================================
           / Placed at the end of the document so the pages load faster
-          %script{:src => "https://code.jquery.com/jquery-1.10.2.min.js"}
-          %script{:src => "/dist/js/bootstrap.min.js"}
-          %script{:src => "/register.js"}
+          %script{:src => "../assets/js/jquery.min.js"}
+          %script{:src => "../assets/js/bootstrap.min.js"}
+          %script{:src => "../assets/js/register.js"}
           :javascript
                         
           function flo()
