--- a/views/main.haml
+++ b/views/main.haml
@@ -1,41 +1,22 @@
 !!!
 %html{:lang => "en"}
   %head
-    %meta{:charset => "utf-8"}
-      %meta{:content => "IE=edge", "http-equiv" => "X-UA-Compatible"}
-        %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
-          %meta{:content => "", :name => "description"}
-            %meta{:content => "", :name => "author"}
-              %link{:href => "/docs-assets/ico/favicon.png", :rel => "shortcut icon"}
-                %title Event Planner
-                %link{:href => "../assets/css/bootstrap.css", :rel => "stylesheet"}
-                  / Custom styles for this template
-                  %link{:href => "", :rel => "stylesheet"}
-                    / Just for debugging purposes. Don't actually copy this line!
-                    /[if lt IE 9] <script src="/docs-assets/js/ie8-responsive-file-warning.js"></script>
-                    / HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
-                    /[if lt IE 9]
-                      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-                      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-                    %script{:src => "../assets/js/login.js"}  
-                    :javascript
-                      function demoVisibility()
-                      {
-                      document.getElementById("show1").style.visibility="hidden";
-                      demoVisibility2();
-                      }
-                      function demoVisibility2()
-                      {
-                      document.getElementById("b1").style.visibility="hidden";
-                      }
+    %title Event Planner
+    %link{:href => "../assets/css/bootstrap.css", :rel => "stylesheet"}
+    %script{:src => "../assets/js/login.js"}  
+    :javascript
+      function demoVisibility()
+      {
+        document.getElementById("show1").style.visibility="hidden";
+        document.getElementById("b1").style.visibility="hidden";
+      }
   %body{:onload => "demoVisibility()"}
-    %div{:role => "navigation", :style => "background:#000000"}
+    %div{:style => "background:#000000"}
       .container
         .navbar-header
           %button.navbar-toggle{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
             %span.sr-only Toggle navigation
-            %span.icon-bar
-          %a.navbar-brand{:href => "#"}
+          %a.navbar-brand
             %h4 Event Planner
         .navbar-collapse.collapse
           %form.navbar-form.navbar-right{:role => "form"}
