--- a/views/home.haml
+++ b/views/home.haml
@@ -7,8 +7,10 @@
     .container
       %h1 Event Planner
       %button.btn.btn-success.btn-lg{"data-target" => "#signInModal", "data-toggle" => "modal"} Sign In
+      %button.btn.btn-success.btn-lg{"data-target" => "#signUpModal", "data-toggle" => "modal"} Sign Up
       %p#Welcome{:style => 'visibility : hidden'} Welcome User
       %p#InvalidUser{:style => 'visibility : hidden'}Incorrect Username And Password
+      %p#SuccessfulSignup{:style => 'visibility : hidden'}You have signed up successfully
       #signInModal.modal.fade.hide
         .modal-header
           %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
@@ -26,7 +28,25 @@
             Remember me
             %button#show.btn.btn-large.btn-primary{:'data-dismiss' => "modal",:onclick => " return login(uname.value,pwd.value)", :type => "submit"} Sign In              
         .modal-footer
-          Not Yet Registered    
+          Not Yet Registered  
+      #signUpModal.modal.fade.hide
+        .modal-header
+          %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
+          %h4.modal-title Sign Up
+        .modal-body
+          %form.form-signin                    
+            %label Username
+            %input{:name => "uname", :placeholder => "Email address",:type => "text"}
+                      
+            %label Create Password
+            %input{:name => "pwd", :placeholder => "Create Password",:type => "password"}
+            
+            %label Confirm Password
+            %input{:name => "confirmpwd", :placeholder => "Confirm Password",:type => "password"}
+            
+            %br              
+            
+            %button#show.btn.btn-large.btn-primary{:'data-dismiss' => "modal",:onclick => " return signup(uname.value,pwd.value,confirmpwd.value)", :type => "submit"} Sign Up               
     %script{:src => "../assets/js/login.js"}
     %script{:src => "../assets/js/jquery.min.js"}
     %script{:src => "../assets/js/bootstrap.min.js"} 
