signout and show my events added

--- a/web/views/home.haml
+++ b/web/views/home.haml
@@ -5,9 +5,9 @@
     %link{:href => "../assets/css/bootstrap.css", :rel => "stylesheet"}
   %body
     .container
-      %h1 Event Planner
+      %h1 Flockers
       %button.btn.btn-success.btn-lg{"data-target" => "#signInModal", "data-toggle" => "modal"} Sign In
-      %button.btn.btn-success.btn-lg{"data-target" => "#signUpModal", "data-toggle" => "modal"} Sign Up
+      %button.btn.btn-primary.btn-lg{"data-target" => "#signUpModal", "data-toggle" => "modal"} Sign Up
       %p#Welcome{:style => 'visibility : hidden'} Welcome User
       %p#InvalidUser{:style => 'visibility : hidden'}Incorrect Username And Password
       %p#SuccessfulSignup{:style => 'visibility : hidden'}You have signed up successfully
