--- a/web/views/profile.haml
+++ b/web/views/profile.haml
@@ -15,21 +15,7 @@
       %input.hide{:id =>"current_user", :value => "#{@user}"}
       %p.alert.alert-info{:"data-bind" => "visible: message, text: message"}
       .row
-        .span6 
-          %button#CreateEvent.btn-success.btn-large{"data-target" => "#createEventModal", "data-toggle" => "modal" , :"data-bind" => "click : createEvent",:style =>"visibility:hidden"} Create Event
-          %button.btn-primary.btn-large{:"data-bind" => "click : showMyEvents"}My Events 
-          %table.table.table-striped{:"data-bind"=>"foreach:myEvents",:border => '0'}
-            %tr
-              %td{:"data-bind" => "text : ename()"}
-              %td{:"data-bind" => "text : date()"}
-              %td{:"data-bind" => "text : fees()"}
-              %td{:"data-bind" => "text : prize()"}
-              %td{:"data-bind" => "text : place()"}
-              %td{:"data-bind" => "text : time()"}
-              %td{:"data-bind" => "text : description()"}
-              %td
-                %button.btn-primary{:"data-bind" => "click : DeleteEvent"}Delete Me
-        .span6
+        .span12
           %table
             %tr
               %td
@@ -47,6 +33,23 @@
                       %td{:"data-bind" => "text : place()"}
                       %td{:"data-bind" => "text : time()"}
                       %td{:"data-bind" => "text : description()"}
+                      %td
+                        %button.btn-primary{}Participate
+        .row
+          .span12
+            %button#CreateEvent.btn-success.btn-large{"data-target" => "#createEventModal", "data-toggle" => "modal" , :"data-bind" => "click : createEvent",:style =>"visibility:hidden"} Create Event
+            %button.btn-primary.btn-large{:"data-bind" => "click : showMyEvents"}My Events 
+            %table.table.table-striped{:"data-bind"=>"foreach:myEvents",:border => '0'}
+              %tr
+                %td{:"data-bind" => "text : ename()"}
+                %td{:"data-bind" => "text : date()"}
+                %td{:"data-bind" => "text : fees()"}
+                %td{:"data-bind" => "text : prize()"}
+                %td{:"data-bind" => "text : place()"}
+                %td{:"data-bind" => "text : time()"}
+                %td{:"data-bind" => "text : description()"}
+                %td
+                  %button.btn-primary{:"data-bind" => "click : DeleteEvent"}Delete Me
       #createEventModal.modal.fade.hide
         .modal-header
           %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
