--- a/web/views/profile.haml
+++ b/web/views/profile.haml
@@ -5,28 +5,58 @@
     %link{:href => "../assets/css/bootstrap.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/bootstrap-timepicker.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/datepicker.css", :rel => "stylesheet"}
+    %script{:src => "../assets/js/jquery.min.js"}
+    %script{:src => "../assets/js/jquery.wheelmenu.js", :type => "text/javascript"}
+    %link{:href => "../assets/css/style.css", :rel => "stylesheet", :type => "text/css"}
+    %link{:href => "../assets/css/navbar-fixed-top.css", :rel => "stylesheet"}
   %body
+    .navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
+      .container
+        .navbar-header
+          %button.navbar-toggle{"data-target" => ".navbar-collapse" , :type => "button" ,  "data-toggle" => "collapse" }
+            %span.sr-only Toggle navigation
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          %a.navbar-brand{:href => "#"}
+            %b FLOCKERS
+        .navbar-collapse.collapse
+          %ul.nav.navbar-nav
+            %li
+              %a{:href => "#" , :"data-bind" => "click : showMyEvents"}My Events
+            %li
+              %a{:href => "#",:"data-bind" => "click : showParticipationEvents"}Participated Events
+            %li
+              %input{:placeholder => 'Search by Event Name',:type =>"text",:"data-bind" => "value: event().ename"}
+            %li
+              %button.btn-primary{:"data-bind" => "click : searchEvent"}Search
+          %ul.nav.navbar-nav.navbar-right
+            %li
+              %button.btn.btn-danger{:"data-bind" => "click : signOut"} Sign Out
     .container
       .row
         .span4
-          %h1 Flockers
-      .row
-        .span8
-          %form
-            %input{:placeholder => 'Search by Event Name',:type =>"text",:"data-bind" => "value: event().ename"}
-            %button.btn-primary{:"data-bind" => "click : searchEvent"}Search 
-        .span4
-          %button.btn.btn-danger{:"data-bind" => "click : signOut"} Sign Out
-      %input.hide{:id =>"current_user", :value => "#{@user}"}
-      %p.alert.alert-info{:"data-bind" => "visible: message, text: message"}
-      %button.btn-primary.btn{:"data-bind" => "click : showMyEvents"}My Events 
+          %input.hide{:id =>"current_user", :value => "#{@user}"}
+          %p.alert.alert-info{:"data-bind" => "visible: message, text: message"}
       .row
         .span12
-          %label Would you like to play:
-          %div{:"data-bind"=>"foreach:topEvents",:border => '0'}
-            %button.btn-success{:"data-bind" => "text :event,  click: function () { $root.searchEventHelper(event);} "}
-      .row
-        .span12
+          .main
+            %a.wheel-button{:href => "#wheel"}Would you like to play
+            .pointer
+            %ul#wheel.wheel{:'data-bind' => 'foreach : category'}
+              %li.item
+                %a{:'data-bind' => 'text : $data,click : function() { $root.searchEventByCategory($data);}'}
+        .well{:'data-bind' => "visible : searchEvents().length"}
+          %table.table.table-striped{:border => '0'}
+            %tr
+              %th Name
+              %th Date
+              %th Fees
+              %th Prize
+              %th Place
+              %th Time
+              %th Description
+              %th Want To Participate
           %table.table.table-striped{:"data-bind"=>"foreach:searchEvents",:border => '0'}
             %tr
               %td{:"data-bind" => "text : ename()"}
@@ -37,10 +67,21 @@
               %td{:"data-bind" => "text : time()"}
               %td{:"data-bind" => "text : description()"}
               %td
-                %button.btn-primary{}Participate
+                %button.btn-primary{:'data-bind' =>'click : function() { $root.participate(id());}'}Participate
         .row
           .span12
             %button#CreateEvent.btn-success.btn-large{"data-target" => "#createEventModal", "data-toggle" => "modal" , :"data-bind" => "click : createEvent , visible : createEventFlag"} Create Event
+          .well{:'data-bind' => "visible : myEvents().length"}
+            %table.table.table-striped{:border => '0'}
+              %tr
+                %th Name
+                %th Date
+                %th Fees
+                %th Prize
+                %th Place
+                %th Time
+                %th Description
+                %th Delete
             %table.table.table-striped{:"data-bind"=>"foreach:myEvents",:border => '0'}
               %tr
                 %td{:"data-bind" => "text : ename()"}
@@ -52,7 +93,17 @@
                 %td{:"data-bind" => "text : description()"}
                 %td
                   %button.btn-primary{:"data-bind" => "click : DeleteEvent"}Delete Me
-            %button.btn-primary.btn-large{:"data-bind" => "click : showParticipationEvents"}Participated Events
+          .well{:'data-bind' => "visible : participationEvents().length>0"}
+            %table.table.table-striped{:border => '0'}
+              %tr
+                %th Name
+                %th Date
+                %th Fees
+                %th Prize
+                %th Place
+                %th Time
+                %th Description
+                %th Delete
             %table.table.table-striped{:"data-bind"=>"foreach:participationEvents",:border => '0'}
               %tr
                 %td{:"data-bind" => "text : ename()"}
@@ -94,6 +145,5 @@
         .modal-footer
           %button.btn-large{:'data-dismiss' => "modal",:"data-bind" => "click : createEventHelper"} Create 
     %script{:src => "../assets/js/knockout-2.2.1.js"} 
-    %script{:src => "../assets/js/jquery.min.js"}
     %script{:src => "../assets/js/bootstrap.min.js"}  
     %script{:src => "../assets/js/profile.js"}
